@@ -152,7 +152,7 @@ Then we use our M0 Line macro assembler to convert our assembly into hex2 format
 Then we need to assemble that hex into our desired program:
 ./bin/vm --rom roms/stage1_assembler-2 --tape_01 temp2 --tape_02 roms/lisp --memory 48K
 
-roms/lisp should have the sha256sum of 15559882382681aaf9b8b75fa3b1fac2ba4bc30cdf990aefd04f5d59319333af
+roms/lisp should have the sha256sum of 014cfa78c887d844b3855c6d12b50e170d57214f7b8f04853aec544ebd6ba5cb
 
 Our lisp will first attempt to evaluate any code in tape_01 and then evaluate any code that the user types in.
 It is recommended to run with no less than 4MB of Memory
