@@ -41,6 +41,7 @@ Added string->list primitive to stage2 lisp
 Added char? primitive to stage2 lisp
 Added string? primitive to stage2 lisp
 Added make_string internal function to stage2 lisp
+Added list->string primitive to stage2 lisp
 
 ** Changed
 Minor refactor of stage3 FORTH by reepa
